# ZiggyMusic

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/hero/ziggymusic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioDspChain.cpp  AudioDspChain.h  AudioDspChainJni.cpp  AudioIoEngine.cpp  AudioIoEngine.h  BufferAddressHelper.cpp  CMakeLists.txt  SuperpoweredConfig.h
app/src/main/java/com/hero/ziggymusic/: Injector.kt  ZiggyMusicApp.kt
app/src/main/java/com/hero/ziggymusic/audio/: AudioDspChainHolder.kt  AudioProcessorAdapter.kt  AudioProcessorChainController.kt  BufferAddressHelper.kt  HeadTracker.kt  PlayerAudioGraph.kt  SpatializerSupport.kt
app/src/main/java/com/hero/ziggymusic/common/: SingleEvent.kt
app/src/main/java/com/hero/ziggymusic/database/: AppFavoritesDatabase.kt  AppMusicDatabase.kt  AppMusicTrackDatabase.kt  AppMyPlaylistDatabase.kt  BaseDao.kt  DataStore.kt  LocalStore.kt
app/src/main/java/com/hero/ziggymusic/di/: DaoModule.kt  DataSourceModule.kt  Injector.kt  PlayerModule.kt  RepositoryModule.kt
app/src/main/java/com/hero/ziggymusic/event/: Event.kt  EventBus.kt
app/src/main/java/com/hero/ziggymusic/ext/: BackgroundExt.kt  DurationExt.kt  ImageBindingAdapterExt.kt  PlayMusicExt.kt  RecyclerBindingAdapterExt.kt  TextBindingAdapterExt.kt  ViewExt.kt
app/src/main/java/com/hero/ziggymusic/listener/: OnRecyclerItemClickListener.kt
app/src/main/java/com/hero/ziggymusic/playback/: MusicMediaItemMapper.kt  PlaybackProgress.kt  PlaybackQueueManager.kt  PlaybackQueueSource.kt  (+1 more)
app/src/main/res/color/: audio_effect_preset_button_stroke_color.xml  audio_effect_preset_button_text_color.xml  bottom_nav_item_color.xml
app/src/main/res/drawable/: bg_audio_effect_bottom_sheet.xml  bg_main_dark_gradient.xml  bg_music_search_field.xml  bg_popup_music_option_menu.xml  bg_setting_dark_gradient.xml  bg_spinner.xml  ic_airplay.xml  ic_airpods.xml  ic_app_settings.xml  ic_back_playlist.xml  ic_chevron_right.xml  ic_clear_24.xml  ic_drag_handle.xml  ic_favorite_star_filled.xml  ic_favorite_star_outlined.xml  ic_favorite_star_undo.xml  ic_launcher_background.xml  ic_launcher_monochrome.xml  ic_left_arrow.xml  ic_music_list.xml  ic_music_note.xml  ic_mute.xml  ic_next_button.xml  ic_option_menu.xml  ic_pause_button.xml  ic_play_button.xml  ic_prev_button.xml  ic_repeat_all.xml  ic_repeat_all_on.xml  ic_repeat_one.xml  ic_repeat_one_on.xml  ic_shuffle_off.xml  ic_shuffle_on.xml  ic_sort_ascending.xml  ic_sort_descending.xml  ic_sort_music_tracks.xml  ic_splash_transparent.xml  ic_volume.xml  ic_white_close.xml  placeholder_album_art.xml  (+3 more)
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/font/: pretendard.xml
app/src/main/res/layout/: activity_main.xml  activity_now_playing.xml  fragment_app_settings.xml  fragment_audio_effect_bottom_sheet.xml  fragment_audio_settings.xml  fragment_favorite_music_tracks.xml  fragment_favorites.xml  fragment_license_notices.xml  fragment_music_list.xml  fragment_music_tracks.xml  fragment_my_play_list.xml  fragment_my_playlist.xml  fragment_player.xml  fragment_setting.xml  fragment_settings.xml  fragment_web_page.xml  item_favorite_music_track.xml  item_favorites.xml  item_license_notice.xml  item_music_list.xml  item_music_track.xml  item_my_play_list.xml  item_my_playlist.xml  item_spinner.xml  notification_player.xml  notification_player_collapsed.xml  notification_player_extended.xml  popup_music_option_menu.xml  popup_music_track_option_menu.xml  popup_music_track_sort_menu.xml  popup_music_tracks_sort_menu.xml  spinner_item.xml
app/src/main/res/menu/: menu_add_music_to_my_playlist_option.xml  menu_add_music_to_myplaylist_option.xml  menu_bt_nav.xml  menu_delete_music_from_myplaylist_option.xml  menu_music_item_add_to_favorites.xml  menu_music_item_remove_from_favorites.xml
app/src/main/res/raw/: audio_visualizer.json
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v31/: themes.xml
app/src/main/res/values-sw320dp/: dimens.xml
app/src/main/res/values-sw360dp/: dimens.xml
app/src/main/res/values-sw400dp/: dimens.xml
app/src/main/res/values-sw480dp/: dimens.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-sw720dp/: dimens.xml
app/src/main/res/values-v31/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  fragment_player_scene.xml  player_motion_scene.xml
app/src/test/java/com/hero/ziggymusic/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+175 files in other folders)
